--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
     height: 50px;
     width: 450px;
     text-align: right;
+    font-size: large;
     font-weight: 800;
     padding-top: 20px;
     padding-right: 10px;
@@ -72,6 +73,7 @@ body {
     background-color: rgba(244, 168, 190, 0.5);
     color: #1E2B37;
     padding-top: 40px;
+    text-shadow: -2px 0 rgb(244, 168, 190), 0 2px rgb(244, 168, 190), 2px 0 rgb(244, 168, 190), 0 -2px rgb(244, 168, 190);
 }
 #input1 {
     width: 200px;
@@ -129,6 +131,9 @@ button:active {
     height: 30px;
     border-radius: 10px;
     border-color: rgb(0, 0, 0, 0.5);
+}
+li {
+    margin: 5px 0px;
 }
 #quote {
     position: absolute;
